modified:   ../blocks/cards/__image/cards__image.css 	modified:   ../blocks/cards/__like/cards__like.css 	modified:   ../blocks/cards/__title-container/cards__title-container.css 	modified:   ../blocks/cards/cards.css 	modified:   ../blocks/footer/__copyright/footer__copyright.css 	modified:   ../blocks/footer/footer.css 	modified:   ../blocks/header/header.css 	new file:   ../blocks/popup/__close/popup__close.css 	new file:   ../blocks/popup/__container/popup__container.css 	new file:   ../blocks/popup/__form/popup__form.css 	new file:   ../blocks/popup/__input/popup__input.css 	new file:   ../blocks/popup/__save/popup__save.css 	new file:   ../blocks/popup/__title/popup__title.css 	new file:   ../blocks/popup/_is-opened/popup_is-opened.css 	new file:   ../blocks/popup/popup.css 	modified:   ../blocks/user/__add-button/user__add-button.css 	modified:   ../blocks/user/__rename-button/user__rename-button.css 	modified:   ../blocks/user/user.css 	new file:   ../images/CloseIcon.png 	modified:   ../index.html 	modified:   ../pages/index.css 	new file:   index.js

--- a/blocks/cards/__like/cards__like.css
+++ b/blocks/cards/__like/cards__like.css
@@ -5,4 +5,9 @@
   border: none;
   background-color: white;
   cursor: pointer;
+  transition: all .5s;
+}
+
+.cards__like:hover {
+  opacity: .5;
 }
