--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,12 +1,17 @@
 .cards {
-  width: calc(100% - 400px);
+  max-width: 880px;
   margin: 0 auto;
   display: grid;
   grid-template-columns: repeat(auto-fit, 282px);
   justify-content: center;
-  /* grid-template-columns: repeat(auto-fit, minmax(282px, 1fr)); */
   gap: 20px 17px;
   padding: 46px 0 66px;
+}
+
+@media screen and (max-width: 984px) {
+  .cards {
+    width: calc(100% - 104px);
+  }
 }
 
 @media screen and (max-width: 568px) {
