--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,5 +1,16 @@
 .footer{
   width: calc(100% - 400px);
   margin: 0 auto;
+}
 
+@media screen and (max-width: 984px) {
+  .footer {
+    width: calc(100% - 104px);
+  }
+}
+
+@media screen and (max-width: 568px) {
+  .footer{
+    width: calc(100% - 38px);
+  }
 }
