--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -5,10 +5,15 @@
   min-height: 74px;
 }
 
+@media screen and (max-width: 984px) {
+  .header{
+    width: calc(100% - 104px);
+  }
+}
+
 @media screen and (max-width: 568px) {
   .header{
     min-height: 56px;
     width: 100%;
-   
   }
 }
