--- a/blocks/user/user.css
+++ b/blocks/user/user.css
@@ -1,5 +1,5 @@
 .user {
-  width: calc(100% - 400px);
+  max-width: 880px;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
@@ -7,7 +7,13 @@
   padding-top: 40px;
 }
 
-@media screen and (max-width: 568px) {
+@media screen and (max-width: 984px) {
+  .user {
+    width: calc(100% - 104px);
+  }
+}
+
+@media screen and (max-width: 796px) {
   .user{
     flex-direction: column;
     width: calc(100% - 38px);
