modified:   blocks/cards/__image/cards__image.css 	modified:   blocks/cards/__title-container/cards__title-container.css 	modified:   blocks/popup/__close/popup__close.css 	modified:   blocks/popup/__save/popup__save.css 	modified:   blocks/user/__add-button/user__add-button.css 	modified:   blocks/user/__name/user__name.css 	modified:   blocks/user/__rename-button/user__rename-button.css 	modified:   blocks/user/__status/user__status.css 	deleted:    images/CloseIcon.png 	new file:   images/CloseIcon.svg 	deleted:    images/header-logo.png 	new file:   images/logo.svg 	new file:   images/pen.svg 	new file:   images/plus.svg 	deleted:    images/vector.png 	deleted:    images/vector2.png 	modified:   index.html

--- a/blocks/user/__add-button/user__add-button.css
+++ b/blocks/user/__add-button/user__add-button.css
@@ -4,10 +4,12 @@
   cursor: pointer;
   border: 2px solid white;
   background-color: black;
-  background-image: url(../../../images/vector.png);
+  background-image: url(../../../images/plus.svg);
   background-position: center;
   background-repeat: no-repeat;
+  border-radius: 2px;
   transition: all .5s;
+  background-size: 22px;
 }
 
 .user__add-button:hover {
