--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -2,7 +2,7 @@
   width: 32px;
   height: 32px;
   background-color: transparent;
-  background-image: url(../../../images/CloseIcon.png);
+  background-image: url(../../../images/CloseIcon.svg);
   background-size: cover;
   position: absolute;
   top: -40px;
