--- a/blocks/user/__rename-button/user__rename-button.css
+++ b/blocks/user/__rename-button/user__rename-button.css
@@ -4,7 +4,7 @@
   cursor: pointer;
   background-color: black;
   border: 1px solid white;
-  background-image: url(../../../images/vector2.png);
+  background-image: url(../../../images/pen.svg);
   background-position: center;
   background-repeat: no-repeat;
   transition: all .5s;
@@ -18,5 +18,6 @@
   .user__rename-button {
     width: 18px;
     height: 18px;
+    background-size: 7.5px 7.5px;
   }
 }
