--- a/blocks/user/__status/user__status.css
+++ b/blocks/user/__status/user__status.css
@@ -3,6 +3,10 @@
   font-size: 18px;
   line-height: 22px;
   font-weight: 400;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 340px;
 }
 
 @media screen and (max-width: 568px) {
