modified:   blocks/cards/__like/cards__like.css 	modified:   blocks/cards/__title-container/cards__title-container.css 	modified:   blocks/cards/__title/cards__title.css 	modified:   blocks/user/__name/user__name.css 	modified:   blocks/user/__status/user__status.css

--- a/blocks/cards/__like/cards__like.css
+++ b/blocks/cards/__like/cards__like.css
@@ -1,11 +1,12 @@
 .cards__like {
   height: 19px;
-  width: 22px;
+  min-width: 22px;
   background-image: url(../../../images/vector3.svg);
   border: none;
   background-color: white;
   cursor: pointer;
   transition: all .5s;
+  margin-right: 20px;
 }
 
 .cards__like:hover {
