--- a/blocks/cards/__title-container/cards__title-container.css
+++ b/blocks/cards/__title-container/cards__title-container.css
@@ -1,6 +1,8 @@
 .cards__title-container {
   display: flex;
-  align-items: baseline;
+  align-items: center;
   justify-content: space-between;
-  padding: 25px 20px;
+  /* padding: 25px 20px; */
+  height: 79px;
+  width: 100%;
 }
