--- a/pages/index.css
+++ b/pages/index.css
@@ -22,6 +22,7 @@
 @import url(../blocks/cards/__title/cards__title.css);
 @import url(../blocks/cards/__like/cards__like.css);
 @import url(../blocks/cards/__like/_active/cards__like_active.css);
+@import url(../blocks/cards/__trash/cards__trash.css);
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
@@ -34,5 +35,8 @@
 @import url(../blocks/popup/__save/popup__save.css);
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/_is-opened/popup_is-opened.css);
-
+@import url(../blocks/popup/__big-image-container/popup__big-image-container.css);
+@import url(../blocks/popup/__big-image-wrap/popup__big-image-wrap.css);
+@import url(../blocks/popup/__caption/popup__caption.css);
+@import url(../blocks/popup/__big-image/popup__big-image.css);
 
