--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -6,9 +6,9 @@
   line-height: 17px;
 }
 
-.popup__input:last-of-type {
+/* .popup__input:last-of-type {
   margin-top: 25px;
-}
+} */
 
 @media screen and (max-width: 568px) {
   .popup__input {
