--- a/pages/index.css
+++ b/pages/index.css
@@ -32,11 +32,15 @@
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/__form/popup__form.css);
 @import url(../blocks/popup/__input/popup__input.css);
+@import url(../blocks/popup/__input/_type/popup__input_type_error.css);
 @import url(../blocks/popup/__save/popup__save.css);
+@import url(../blocks/popup/__save/_disabled/popup__save_disabled.css);
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/_is-opened/popup_is-opened.css);
 @import url(../blocks/popup/__big-image-container/popup__big-image-container.css);
 @import url(../blocks/popup/__big-image-wrap/popup__big-image-wrap.css);
 @import url(../blocks/popup/__caption/popup__caption.css);
 @import url(../blocks/popup/__big-image/popup__big-image.css);
+
+@import url(../blocks/error/error.css);
 
