--- a/blocks/error/error.css
+++ b/blocks/error/error.css
@@ -1,9 +1,8 @@
 .error {
   font-size: 12px;
-  line-height: 14px;
+  line-height: 15px;
   color: #FF0000;
   display: block;
-  margin-top: 4px;
   box-sizing: border-box;
-  height: 23px;
+  min-height: 30px;
 }
