--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,9 +1,10 @@
 .popup__input {
   border: none;
   border-bottom: 1px solid rgb(0, 0, 0, .2);
-  padding-bottom: 13px;
+  padding-bottom: 10px;
   font-size: 14px;
   line-height: 17px;
+  margin-bottom: 4px;
 }
 
 /* .popup__input:last-of-type {
